--- a/index.html
+++ b/index.html
@@ -481,7 +481,8 @@
 
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-	
+	<script src="node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
+	<script src="js/sweetalert.js"></script>
 </body>
 
 
