--- a/html/intern_review.html
+++ b/html/intern_review.html
@@ -54,7 +54,7 @@
 
 	<main>
 		<header class="header">
-			<img src="../image/rice_logo.png" alt="logo" class="logo">
+			<img src="../image/ds-logo.png" alt="logo" class="logo">
 	
 			<form action="#" class="search">
 				<input type="text" class="search__input" placeholder="Search our design studio">
