--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 	<main>
 		<header class="header">
-			<img src="image/rice_logo.png" alt="logo" class="logo">
+			<img src="image/ds-logo.png" alt="logo" class="logo">
 	
 			<form action="#" class="search">
 				<input type="text" class="search__input" placeholder="Search our design studio">
